Update waybar config

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,21 +1,28 @@
 * {
-	font-size: 18px;
-	font-family: monospace;
+  font-size: 18px;
+  font-family: monospace;
 }
 
 window#waybar {
-	background: #292b2e;
-	color: #fdf6e3;
+  background: #292b2e;
+  color: #fdf6e3;
 }
 
 #custom-right-arrow-dark,
 #custom-left-arrow-dark {
-	color: #1a1a1a;
+  margin-left: -1px;
+  color: #1a1a1a;
 }
+
+#custom-left-arrow-dark,
+#custom-left-arrow-light {
+  margin-right: -1px;
+}
+
 #custom-right-arrow-light,
 #custom-left-arrow-light {
-	color: #292b2e;
-	background: #1a1a1a;
+  color: #292b2e;
+  background: #1a1a1a;
 }
 
 #workspaces,
@@ -28,51 +35,71 @@ window#waybar {
 #tray,
 #temperature,
 #language,
-#custom-clipboard {
-	background: #1a1a1a;
+#custom-clipboard,
+#custom-suspend {
+  background: #1a1a1a;
 }
 
 #clock,
 #language {
-  margin-bottom: -6px;
+  margin-bottom: -8px;
 }
+
 #workspaces {
   margin-bottom: -10px;
 }
+
 #mode {
   margin-bottom: -5px;
 }
 
 #workspaces button {
-	padding: 0 2px;
-	color: #fdf6e3;
+  padding: 0 2px;
+  color: #fdf6e3;
 }
+
 #workspaces button.focused {
-	color: #268bd2;
+  color: #268bd2;
 }
+
 #workspaces button.urgent {
-	color: red;
+  color: red;
 }
+
 #workspaces button:hover {
-	box-shadow: inherit;
-	text-shadow: inherit;
-	background: #1a1a1a;
-	border: #1a1a1a;
-	padding: 0 3px;
+  box-shadow: inherit;
+  text-shadow: inherit;
+  background: #1a1a1a;
+  border: #1a1a1a;
+  padding: 0 3px;
+}
+
+button {
+  color: #fdf6e3;
+  padding: 0px;
+}
+
+button:hover {
+  text-shadow: none;
+  box-shadow: inherit;
 }
 
 #pulseaudio {
-	color: #268bd2;
+  color: #268bd2;
 }
+
 #memory {
-	color: #2aa198;
+  color: #2aa198;
 }
+
 #cpu {
-	color: #6c71c4;
+  color: #6c71c4;
 }
+
 #battery {
-	color: #859900;
+  color: #859900;
 }
+
 #temperature {
   color: #ff7777;
 }
@@ -86,14 +113,19 @@ window#waybar {
 #temperature,
 #tray,
 #language {
-	padding: 0 10px;
+  padding: 0 10px;
 }
 
 #mode {
-	padding-right: 10px;
+  padding-right: 10px;
 }
 
 #custom-clipboard {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+#custom-suspend {
   padding-right: 10px;
   padding-left: 10px;
 }
